# docs/swagger.yaml
@@ -14,6 +14,23 @@ paths:
       summary: 首页api
       tags:
       - index
+  /msg/SendUserMsg:
+    get:
+      parameters:
+      - description: User Id
+        in: query
+        name: id
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+      summary: 建立websocket连接，启动通信相关后台资源
+      tags:
+      - msgService
   /user/createUser:
     post:
       parameters:
@@ -64,6 +81,25 @@ paths:
       summary: 删除用户
       tags:
       - userService
+  /user/findUserByNameAndPwd:
+    post:
+      parameters:
+      - description: 用户名
+        in: query
+        name: name
+        type: string
+      - description: 密码
+        in: query
+        name: password
+        type: string
+      responses:
+        "200":
+          description: code","message"}
+          schema:
+            type: string
+      summary: 所有用户
+      tags:
+      - 用户模块
   /user/getUserList:
     get:
       description: get all users.
