# router/app.go
@@ -14,14 +14,20 @@ func Router() *gin.Engine {
 	docs.SwaggerInfo.BasePath = ""
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
 
+	r.GET("/", service.GetIndex)
 	r.GET("/index", service.GetIndex)
+	r.GET("/toChat", service.ToChat)
+	r.POST("/searchFriends", service.SearchFriends)
+
 	r.GET("/user/getUserList", service.GetUserList)
 	r.POST("/user/createUser", service.CreateUser)
 	r.POST("/user/deleteUser", service.DeleteUser)
 	r.POST("/user/updateUser", service.UpdateUser)
 	r.GET("/msg/SendUserMsg", service.SendUserMsg)
+	r.POST("user/findUserByNameAndPwd", service.FindUserByNameAndPwd)
+	r.GET("/toRegister", service.ToRegister)
 
 	r.Static("/asset", "asset/")
-	r.LoadHTMLGlob("view/**/*")
+	r.LoadHTMLGlob("views/**/*")
 	return r
 }
